# Snowflake-study

./: .gitignore  CHANGELOG.md  INSTALLATION.md  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.cfg  snowflake_learning_guide.sql  snowflake_sales_forecast_project.sql
.github/workflows/: test.yml
config/: connections.py  dev.yaml  example_credentials.yaml  prod.yaml  staging.yaml
docs/: SALES_FORECAST_PROJECT.md  architecture.md  data_dictionary.md  setup.md
notebooks/: README.md
src/python/scripts/: __init__.py  run_etl.py  run_sales_forecast.py
src/python/utils/: __init__.py  data_validation.py  logging_utils.py
src/sql/bronze/: 00_template_raw_load.sql  01_sales_raw_data_generator.sql
src/sql/gold/: 00_template_analytics_tables.sql  01_sales_analytics_facts.sql  02_sales_forecasting_model.sql
src/sql/silver/: 00_template_cleaning_standardization.sql  01_sales_cleaning_features.sql
tests/integration/: test_snowflake_connection.py
tests/unit/: test_data_validation.py
